Module-10-fix-overflow-by-flex-wrap

--- a/html-css/Module-10/Homework/css/container-body-top.css
+++ b/html-css/Module-10/Homework/css/container-body-top.css
@@ -1,12 +1,11 @@
 .container__body--top {
-    width: 100vw;
     background-image: -webkit-gradient(linear,left top, left bottom,from(rgba(243, 129, 129, 0.9)),to(rgba(252, 227, 138, 0.9))), url(../img/bird.png);
     background-image: -webkit-linear-gradient(rgba(243, 129, 129, 0.9),rgba(252, 227, 138, 0.9)), url(../img/bird.png);
     background-image: -o-linear-gradient(rgba(243, 129, 129, 0.9),rgba(252, 227, 138, 0.9)), url(../img/bird.png);
     background-image: linear-gradient(rgba(243, 129, 129, 0.9),rgba(252, 227, 138, 0.9)), url(../img/bird.png);
-    background-position: center center;
     background-size: cover;
     background-repeat: no-repeat;
+    background-attachment: fixed;
 }
 
 @media (-webkit-min-device-pixel-ratio: 2), (-o-min-device-pixel-ratio: 2/1), (min-resolution: 192dpi) {
@@ -19,6 +18,6 @@
 }
 
 .container__content {
-    width: 75rem;
+    max-width: 75rem;
     margin: auto;
 }
